--- a/src/componentes/Formulario/Formulario.css
+++ b/src/componentes/Formulario/Formulario.css
@@ -1,7 +1,9 @@
 .formulario{
     display: flex;
-    justify-content: center;
-    margin: 80px 0;
+    justify-content: space-evenly;
+    margin: 80px 50px;
+    flex-wrap: wrap;
+    gap: 20px;
 }
 
 .formulario form{
@@ -10,6 +12,7 @@
     border-radius: 20px;
     box-shadow: 7px 7px 15px rgba(0,0,0,0.08);
     padding: 8px 100px;
+    flex: 1;
 
 }
 
