--- a/src/componentes/Header/Header.css
+++ b/src/componentes/Header/Header.css
@@ -1,8 +1,32 @@
-.header{
-    background-color: #6278F7;
-    text-align: center;
+header {
+    background-color: #000;
+    padding: 20px 0;
 }
 
-.header img{
-    max-width: 100%;
+.caja{
+   display: flex;
+   justify-content: space-evenly;
+   align-items: center;
+}
+.caja img{
+    height: 150px;
+    
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+}
+
+nav a{
+    text-transform: uppercase;
+    color: #fff;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #d6b573;
+    text-decoration: underline;
 }
